# nh-friction

./: .gitignore  pyproject.toml
.github/workflows/: pages.yml
.omc/sessions/: 9c990b60-b03e-4a7d-86b2-680d323c8b24.json
.omc/state/: agent-replay-9c990b60-b03e-4a7d-86b2-680d323c8b24.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: custom.css  data.json  index.html
docs/assets/: app.js  style.css
docs/fixtures/: example.json
orbits/001-pade-cmaes/: log.md  solution.py
orbits/002-pade-cmaes-refine/: log.md  make_figures.py  solution.py  sweep.py  sweep2.py
orbits/003-cmaes-3pot/: log.md  make_figures.py  solution.py
orbits/004-composite-friction/: log.md  make_figures.py  optimize.py  scan.py  scan2.py  scan3.py  scan_boost.py  scan_final.py  solution.py
orbits/005-hessian-landscape/: .gitignore  hessian_diag.py  hessian_sweep.py  hill_climb.py  log.md  newton_step.py  plot_hessian.py  run.sh  solution.py  tmp_sol_g72bp6_e.py  tmp_sol_m_4ubbo0.py
orbits/006-nonmonotonic-coupling/: log.md  optimize.py  solution.py
orbits/007-pade-neural/: log.md  optimize.py  solution.py
orbits/008-braga-travis-pure/: log.md  make_figure.py  solution.py
orbits/009-hybrid-lambda/: cma_results.json  grid_results.json  grid_search.py  log.md  make_figure.py  optimize.py  optimize_v2.py  quick_grid.py  solution.py  solution_candidate.py  solution_candidate2.py
orbits/010-potential-adaptive/: log.md  make_figure.py  solution.py  sweep.py  (+2 more)
research/: config.yaml  problem.md
scripts/: campaign_context.py
(+45 files in other folders)
